html structure add

--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rocket.sect</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="page">
+      <nav>
+        <img src="./assets/logo.svg" alt="" />
+        <ul>
+          <li class="a">Início</li>
+          <li class="a">Serviços</li>
+          <li class="a">Contato</li>
+        </ul>
+      </nav>
+      <main>
+        <section>
+          <img
+            src="./assets/img1.png"
+            alt="Um desenho de uma mulher ao lado de um notebook gigante"
+          />
+          <h1>Seus dados estão <span>protegidos</span>?</h1>
+          <p>
+            A informação é fundamental e de extrema importância para qualquer
+            empresa.<br />
+            Aqui vai um texto como se fosse uma empresa de segurança da
+            informação apresentando o seu produto e com o texto todo estilizado.
+          </p>
+        </section>
+      </main>
+      
+      <footer>
+        para mais informações nos siga no instagram <a href="">@rocketsect</a>
+      </footer>
+      
+      <img src="./assets/padlock.svg" alt="Cadeado branco e verde no canto inferior esquerdo da tela">
+
+    </div>
+  </body>
 </html>
