--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500;700&family=Open+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rocket.sect</title>
@@ -9,35 +15,43 @@
   <body>
     <div class="page">
       <nav>
-        <img src="./assets/logo.svg" alt="" />
+        <a id="logo" href="#"><img src="./assets/logo.svg" alt="" /> </a>
         <ul>
-          <li class="a">Início</li>
-          <li class="a">Serviços</li>
-          <li class="a">Contato</li>
+          <li><a href="">Início</a></li>
+          <li><a href="">Contato</a></li>
+          <li><a href="">Serviços</a></li>
         </ul>
       </nav>
+
       <main>
+        <img
+          src="./assets/img1.png"
+          alt="Um desenho de uma mulher ao lado de um notebook gigante"
+        />
         <section>
-          <img
-            src="./assets/img1.png"
-            alt="Um desenho de uma mulher ao lado de um notebook gigante"
-          />
           <h1>Seus dados estão <span>protegidos</span>?</h1>
           <p>
-            A informação é fundamental e de extrema importância para qualquer
-            empresa.<br />
-            Aqui vai um texto como se fosse uma empresa de segurança da
-            informação apresentando o seu produto e com o texto todo estilizado.
+            A informação é fundamental e de
+            <strong>extrema importância</strong> para qualquer empresa.
+          </p>
+          <p>
+            Aqui vai um <strong>texto</strong> como se fosse uma empresa de
+            <span>segurança da informação</span><br />
+            apresentando o seu produto e com o texto todo estilizado.
           </p>
         </section>
       </main>
-      
+
       <footer>
+        <div id="line"></div>
         para mais informações nos siga no instagram <a href="">@rocketsect</a>
       </footer>
-      
-      <img src="./assets/padlock.svg" alt="Cadeado branco e verde no canto inferior esquerdo da tela">
 
+      <img
+        id="padlock"
+        src="./assets/padlock.svg"
+        alt="Cadeado branco e verde no canto inferior esquerdo da tela"
+      />
     </div>
   </body>
 </html>
